--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ POSTGRES_PASSWORD=
 
 # caddy
 DOMAIN_NAME=domain.tld
-SUBDOMAIN=subdomain
+N8N_SUBDOMAIN_NAME=n8n
+KAFKA_SUBDOMAIN_NAME=kafka
 SSL_EMAIL=webmaster@domain.tld
 
 # n8n
@@ -13,9 +14,9 @@ GENERIC_TIMEZONE=Europe/Berlin
 DB_POSTGRESDB_USER=
 DB_POSTGRESDB_PASSWORD=
 
-N8N_HOST=subdomain.domain.tld
+N8N_HOST=n8n.domain.tld
 N8N_PROTOCOL=https
-WEBHOOK_URL=https://subdomain.domain.tld/
+WEBHOOK_URL=https://n8n.domain.tld/
 
 # kafka ui
 AUTH_TYPE=LOGIN_FORM
