feat: enhance PostgreSQL setup with user-specific configurations and initialization scripts

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # postgres
-POSTGRES_USER=
+
+# admin user
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=
+
+# n8n postgres integration user
+N8N_POSTGRES_USER=n8n
+N8N_POSTGRES_PASSWORD=
 
 # caddy
 DOMAIN_NAME=domain.tld
