fix: update healthcheck URLs in compose file to use localhost instead of host.docker.internal

--- a/compose.yml
+++ b/compose.yml
@@ -74,7 +74,7 @@ services:
       zoo:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "wget --spider -q http://host.docker.internal:8080/ || exit 1"]
+      test: ["CMD-SHELL", "wget --spider -q http://127.0.0.1:8080/ || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -111,7 +111,7 @@ services:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "wget --spider -q http://host.docker.internal:5678/healthz || exit 1"]
+      test: ["CMD-SHELL", "wget --spider -q http://127.0.0.1:5678/ || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
