--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ DB_POSTGRESDB_PASSWORD=
 
 N8N_HOST=n8n.domain.tld
 N8N_PROTOCOL=https
+N8N_EDITOR_BASE_URL=https://n8n.domain.tld/
 WEBHOOK_URL=https://n8n.domain.tld/
 
 # kafka ui
